--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 pymodbus>=3.6.0
 python-dateutil>=2.8.2
+fastapi>=0.115.0
+uvicorn[standard]>=0.30.0
+sqlalchemy>=2.0.36,<3.0.0
+typing_extensions>=4.12.2
+jinja2>=3.1.2
